--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ nav{
     border-bottom: 1px solid #C4C4C4;
     position: fixed;
     top: 0;
-    z-index: 99999;
+    z-index: 10;
 }
 .nav-bar{
     padding: 13.5px 0px;
@@ -99,11 +99,14 @@ nav{
     padding-left: 10px;
 }
 #video-modal{
-    max-width: 90%;
+    max-width: 100%;
 }
 #modal-video-body{
     display: flex;
     justify-content: center;
+}
+.close{
+    margin-left: -120px;
 }
 .modal-content{
     background-color: #0000008f!important;
@@ -117,8 +120,12 @@ video{
     box-shadow: 0px 0px 10px #ed6940;
     font-size: 20px;
     position: absolute;
-    top: 41%;
-    left: 44%;
+    top: 39%;
+    left: 0;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    right: 0;
     width: 80px;
     height: 80px;
     padding-top: 9px;
@@ -248,10 +255,11 @@ option{
 ul.d-flex.socail-media-handler li {
     margin-right: 19px;
 }
-.td{
+#td{
     color: white;
-    font-weight: 800;
-    font-size: 18px;
+    font-weight: 500;
+    font-size: 23px;
+    margin: 0px 4px;
 }
 .hover-effect{
     position: relative;
@@ -288,4 +296,74 @@ ul.d-flex.socail-media-handler li {
     cursor: pointer;
     padding: 14px 20px;
     border-radius: 50%;
+}
+.hide{
+    display: none;
+}
+@media(max-width: 1300px){
+    .btn-custom-video{
+        width: 70px;
+        height: 70px;
+        top: 27%;
+    }
+    .main-container {
+        padding: 0px 3%;
+    }
+    .btn-custom-video i{
+        font-size: 30px;
+    }
+    .banner h1 {
+        font-size: 46px;
+        line-height: 58px;
+    }
+    .try-for-free-btn{
+        font-size: 1.15rem;
+    }
+    
+    .socail-media-handler i {
+        font-size: 32.5px;
+    }
+    
+    .hide{
+        display:block;
+    }
+    .show{
+        display: none;
+    } 
+}
+@media(max-width: 900px){
+    .btn-custom-video {
+        width: 60px;
+        height: 60px;
+        top: 37%;
+    }
+    .btn-custom-video i {
+        font-size: 24px;
+    }
+    .banner h1 {
+        font-size: 37px;
+        line-height: 50px;
+    }
+    .banner p{
+        font-size: 15px;
+        font-weight: bold;
+    }
+    .banner-list img {
+        width: 25px;
+        height: 25px;
+    }
+    .video-playy {
+        position: relative;
+        margin-top: auto;
+        margin-bottom: auto;
+    }
+    .footer ul li a {
+        color: white;
+        font-family: roboto;
+        font-size: 14px;
+        font-weight: 400;
+        line-height: 24.6px;
+    }
+    
+    
 }
